# mst-ai-portal

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  README.md  RUNBOOK.md  SETUP.md  agentic-news.md  ai_ignite_banner_clean.html  docker-compose.gpu.yml  docker-compose.hostnet.yml  docker-compose.prod.yml  docker-compose.transcript.gpu.yml  docker-compose.transcript.yml  docker-compose.yml  migration.sql  passwd.md  portal-announcement-poster.html  portal-pitch-deck.html  run-completion.bash  run.sh  setup.sh  watch.py  watcher.example.json  watcher.json
.github/: dependabot.yml
api/: .dockerignore  Dockerfile  Dockerfile.gpu  Full_Journey_Training_vs_Inference.excalidraw  How LLMs Work: From Training to Talking.md  How_LLMs_Work_Diagram.excalidraw  LLM flow diagram  alembic.ini  config.py  database.py  entrypoint.sh  ffmped_nvidia.md  howto_guides.py  main.py  news_agent.py  news_search.py  requirements.txt
cli/: README.md  ingest.py  pyproject.toml  requirements.txt
cli/commands/: login.py  run.py  status.py  template.py  validate.py
cli/lib/: api.py  auth.py  progress.py  validator.py
db/: init.sql  migrate_add_banners.sql
doc/: Backend_Architecture.md  Backup_Restore_Migration.md  Redundancy_Failover_Design.md  Video Serving Backend Architecture.md  features.md  portal-announcement-poster-offerings.html  task-planning.md
nginx/: mst-ai-portal.conf
react-portal/: .dockerignore  Dockerfile  THEMING-phase2-worklist.md  THEMING.md  convert.py  index.html  nginx-main.conf  nginx.conf  nginx.conf.template  package.json  (+3 more)
(+252 files in other folders)
